--- a/bm-main/src/main/resources/application.yml
+++ b/bm-main/src/main/resources/application.yml
@@ -15,7 +15,7 @@ spring:
       matching-strategy: ant_path_matcher
   # 环境 dev|test|prod
   profiles:
-    active: dev
+    active: prod
 #mybatis
 mybatis-plus:
   #打印sql
